[package]
name = "deepsolver-app"
version = "2.0.0"
description = "DEEPFOLD-SOLVER - GPU-Accelerated GTO Poker Solver with Training Mode"
authors = ["DEEPFOLD"]
edition = "2021"

[lib]
name = "deepsolver_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
bincode = "2"
flate2 = "1"
rand = "0.8"
# native-tls (schannel on Windows) reads the Windows certificate store, so
# antivirus / corporate-proxy MITM root CAs are trusted automatically. Switched
# from rustls-tls in v1.8.4 after users reported "error sending request" on
# https://oauth2.googleapis.com/token when behind HTTPS-scanning AV (Kaspersky,
# Norton, etc.) — rustls's bundled webpki-roots couldn't see the AV's local CA.
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
sha2 = "0.10"
base64 = "0.22"
